[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beamforming"
version = "0.0.1"
description = "Python package for beamforming."
authors = [
    { name = "William F. Jenkins", email = "wfjenkins@ucsd.edu" }
]
dependencies = ["matplotlib", "numpy", "pip", "pyproj", "scipy"]
requires-python = "< 3.13"

# [project.scripts]
# pingdata = "pingdata.cli:main"

[tool.setuptools.packages.find]
where = ["src"]  # Specifies where to find the package